fix right alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -130,6 +130,13 @@ ol li{
 
 }
 
+.pull-right2 {
+  float: right;
+  width: 35%;
+  padding-left: 1%;
+
+}
+
 
 /*code*/
 
